--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- app.js -->
+  <script type="text/javascript" src="/scripts/app.js"></script>
+
 </head>
 <body>
+  <div id="order_summary">
+    <div id="order_total">
+      Order Total: 0
+      <br>
+      <br>
+    </div>
+  </div>
+  <form method="POST" action="define what goes here later">
 
+  </form>
 </body>
 </html>
